--- a/packages/leseohren/Resources/Private/Language/de.locallang_db.xlf
+++ b/packages/leseohren/Resources/Private/Language/de.locallang_db.xlf
@@ -422,6 +422,14 @@
 				<source>Whatsapp number</source>
                 <target>Whatsapp-Nummer</target>
 			</trans-unit>
+            <trans-unit id="tx_leseohren_domain_model_organization.lastcontact" resname="tx_leseohren_domain_model_organization.lastcontact" xml:space="preserve">
+				<source>Last contact</source>
+                <target>Letzte Kontaktaufnahme</target>
+			</trans-unit>
+			<trans-unit id="tx_leseohren_domain_model_organization.lastcontact.description" resname="tx_leseohren_domain_model_organization.lastcontact.description" xml:space="preserve">
+				<source>When was the last contact?</source>
+                <target>Wann war die letzte Kontaktaufnahme?</target>
+			</trans-unit>
 			<trans-unit id="tx_leseohren_domain_model_organization.opening_hours" resname="tx_leseohren_domain_model_organization.opening_hours" xml:space="preserve">
 				<source>Opening Hours</source>
 				<target>Öffnungszeiten</target>
