--- a/packages/leseohren/Resources/Private/Language/locallang.xlf
+++ b/packages/leseohren/Resources/Private/Language/locallang.xlf
@@ -682,6 +682,9 @@
 			<trans-unit id="tx_leseohren_domain_model_organization.whatsapp" resname="tx_leseohren_domain_model_organization.whatsapp" xml:space="preserve">
 				<source>WhatsApp</source>
 			</trans-unit>
+            <trans-unit id="tx_leseohren_domain_model_organization.lastcontact" resname="tx_leseohren_domain_model_organization.lastcontact" xml:space="preserve">
+				<source>Last contact</source>
+			</trans-unit>
 			<trans-unit id="tx_leseohren_domain_model_organization.contact_person" resname="tx_leseohren_domain_model_organization.contact_person" xml:space="preserve">
 				<source>Contact Person</source>
 			</trans-unit>
